# nules_oop

./: .gitignore  CMakeLists.txt
lec1/oop/: MainOOP.cpp  RectangleSquare.cpp
lec1/procedural/: Main.cpp
lec2/: FriendlyFunction.cpp
lec3/: File.cpp
lec4/: Destructor.cpp
lec6/: Inh2.cpp  Inheritance.cpp
