cmake_minimum_required(VERSION 3.23)
project(oop)

set(CMAKE_CXX_STANDARD 14)

add_executable(oop lec1/oop/MainOOP.cpp)


add_executable(proc lec1/procedural/Main.cpp)

add_executable(friend lec2/FriendlyFunction.cpp)

add_executable(file lec3/File.cpp)

add_executable(destructor lec4/Destructor.cpp)


